<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintlayout_docs"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

...
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/normal"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toStartOf="@+id/imageview_docs_more"
            android:layout_toEndOf="@id/image_button_docs_back"
            android:layout_centerVertical="true"
            tools:text="지구온난화 시나리오 기반의 동아시아 기후변화 분석" />

        <ImageView
            android:id="@+id/imageview_docs_more"
...
