...
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_quiz_result_score"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_quiz_result_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/notosans_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/normal"
...
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_quiz_result_count"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_quiz_result_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/notosans_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/normal"
...
